crates/sui-prover/tests/snapshots/ghost_variable_compiler_checks/type_mismatch.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
exiting with bytecode transformation errors
warning: unused function type parameter
  ┌─ tests/inputs/ghost_variable_compiler_checks/type_mismatch.move:5:16
  │
5 │ public fun foo<T>() {}
  │                ^ Unused type parameter 'T'.
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E0012]: type mismatch for global variable u64: expected u8, found bool
   ┌─ tests/inputs/ghost_variable_compiler_checks/type_mismatch.move:10:5
   │
10 │     ghost::declare_global_mut<u64, bool>();
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   ·
21 │     ghost::declare_global_mut<u64, u8>();
   │     ------------------------------------

error[E0012]: type mismatch for global variable T: expected bool, found u8
   ┌─ tests/inputs/ghost_variable_compiler_checks/type_mismatch.move:9:5
   │
 9 │     ghost::declare_global<T, u8>();
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   ·
20 │     ghost::declare_global<T, bool>();
   │     --------------------------------
